--- a/.github/workflows/ftp_transfert.yml
+++ b/.github/workflows/ftp_transfert.yml
@@ -1,16 +1,18 @@
 name: Deploy via ftp
 on: push
 jobs:
-    deploy:
+    web-deploy:
         name: Deploy
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
-            - name: Upload ftp
-              uses: sebastianpopp/ftp-action@releases/v2
-              with:
-                  host: ${{ secrets.FTP_SERVER }}
-                  user: ${{ secrets.FTP_USERNAME }}
-                  password: ${{ secrets.FTP_PASSWORD }}
-                  localDir: "."
-                  remoteDir: "www"
+        - name: 🚚 Get latest code
+          uses: actions/checkout@v2
+
+        - name: 📂 Sync files
+          uses: SamKirkland/FTP-Deploy-Action@4.3.2
+          with:
+              server: ${{ secrets.FTP_SERVER }}
+              username: ${{ secrets.FTP_USERNAME }}
+              password: ${{ secrets.FTP_PASSWORD }}
+              port : 22
+              server-dir: home/smithcx/www
