--- a/.github/workflows/ftp_transfert.yml
+++ b/.github/workflows/ftp_transfert.yml
@@ -15,4 +15,4 @@ jobs:
               username: ${{ secrets.FTP_USERNAME }}
               password: ${{ secrets.FTP_PASSWORD }}
               port : 22
-              server-dir: home/smithcx/www
+              server-dir: home/smithcx/www/
