--- a/.github/workflows/ftp_transfert.yml
+++ b/.github/workflows/ftp_transfert.yml
@@ -13,5 +13,5 @@ jobs:
         user: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         localDir: "./"
-        remoteDir: "home/smithcx/www/"
+        remoteDir: "www"
         options: "--delete --asci"
