--- a/.github/workflows/ftp_transfert.yml
+++ b/.github/workflows/ftp_transfert.yml
@@ -1,21 +1,25 @@
-on: push
 name: 🚀 Deploy website on push
+on:
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
-    runs-on: ubuntu-latest
-    steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v2
+    web-deploy:
+        name: 🎉 Deploy
+        runs-on: ubuntu-latest
+        steps:
+            - name: 🚚 Get latest code
+              uses: actions/checkout@v2
 
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@4.3.2
-      with:
-        server: ${{ secrets.FTP_SERVER }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        server-dir: "www/"
-        exclude: |
-          **/.git*
-          **/.git*/**
-          **/.github/**
+            - name: 📂 Sync files
+              uses: SamKirkland/FTP-Deploy-Action@4.3.2
+              with:
+                  server: ${{ secrets.FTP_SERVER }}
+                  username: ${{ secrets.FTP_USERNAME }}
+                  password: ${{ secrets.FTP_PASSWORD }}
+                  server-dir: "www/"
+                  exclude: |
+                      **/.git*
+                      **/.git*/**
+                      **/.github/**
